--- a/services.html
+++ b/services.html
@@ -103,21 +103,14 @@
         </nav>
     </div>
 </div>
-<div class="owl-carousel">
-    <div class="owl-item-img">
-        <img src="images/banner1.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner2.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner3.jpg" alt="">
-    </div>
-</div>
 <div class="container">
     <div class="title-page">
-        <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
+        <h1>УСЛУГИ</h1>
     </div>
+    <ul class="breadcrumb">
+        <li><a class="link" href="#">Главная</a></li>
+        <li class="active">Услуги</li>
+    </ul>
     <div class="goods-block-main">
         <div class="goods-block-item">
             <div class="goods-main-img">
@@ -188,164 +181,6 @@
         <a href="#" class="fancy-btn">СМОТРЕТЬ ВСЕ</a>
     </div>
 </div>
-<div class="background-image-block">
-    <div class="overlay-block"></div>
-    <div class="container">
-        <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
-        <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в двух шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти услугу, которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса, богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
-        <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки, делают прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят выпрямление и лечение волос, создают великолепные завивки.</p>
-        <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для рук и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
-        <p><span class="underline--magical"><b>Косметический кабинет</b></span> предоставляет огромное количество услуг по уходу за лицом и телом. Здесь есть процедуры аппаратной косметологии, обертывания, пилинги и уходы, инъекционная мезотерапия, биоэпиляция, несколько видов массажа. Здесь же оказывают услуги по визажу, оформляют брови и ресницы, делают татуаж, пирсинг, есть процедура косметического отбеливания зубов.</p>
-        <p><span class="underline--magical"><b>Солярий</b></span> поможет создать летнее настроение, придать коже красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
-        <div class="button-center">
-            <a href="#" class="fancy-btn">ПОДРОБНЕЕ</a>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="title-page">
-        <h2>СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ</h2>
-    </div>
-    <div class="owl-shares">
-        <div class="owl-shares-item">
-            <div class="owl-shares-img">
-                <img src="images/shares1.jpg" alt="">
-            </div>
-            <div class="owl-shares-desk">
-                СДЕЛАЙ ОКРАШИВАНИЕ И ПОЛУЧИ ЛЮБОЕ SPA ДЛЯ ВОЛОС ЗА 50%
-            </div>
-        </div>
-        <div class="owl-shares-item">
-            <div class="owl-shares-img">
-                <img src="images/shares2.jpg" alt="">
-            </div>
-            <div class="owl-shares-desk">
-                ПОДАРОЧНЫЕ СЕРТИФИКАТЫ НА 3000, 5000 И 10000 РУБЛЕЙ
-            </div>
-        </div>
-        <div class="owl-shares-item">
-            <div class="owl-shares-img">
-                <img src="images/shares3.jpg" alt="">
-            </div>
-            <div class="owl-shares-desk">
-                МЕНЮ ПОДАРКОВ
-            </div>
-        </div>
-        <div class="owl-shares-item">
-            <div class="owl-shares-img">
-                <img src="images/shares4.jpg" alt="">
-            </div>
-            <div class="owl-shares-desk">
-                КУРС ИЗ 10 ПРОЦЕДУР LPG ЗА 12 000 РУБЛЕЙ -> ПЕРВЫЙ ВИЗИТ 999
-            </div>
-        </div>
-        <div class="owl-shares-item">
-            <div class="owl-shares-img">
-                <img src="images/shares5.jpeg" alt="">
-            </div>
-            <div class="owl-shares-desk">
-                8 МАРТА В ЛИЦАХ
-            </div>
-        </div>
-    </div>
-    <div class="button-center">
-        <a href="#" class="fancy-btn" target="_blank">СМОТРЕТЬ ВСЕ</a>
-    </div>
-</div>
-<div class="container">
-    <div class="title-page">
-        <h2>МЫ В INSTAGRAM</h2>
-    </div>
-    <div class="gallery-grid">
-        <figure class="gallery__item gallery__item--1">
-            <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt="" class="gallery__img"></a>
-        </figure>
-        <figure class="gallery__item gallery__item--2">
-            <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt="" class="gallery__img"></a>
-        </figure>
-        <figure class="gallery__item gallery__item--3">
-            <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt="" class="gallery__img"></a>
-        </figure>
-        <figure class="gallery__item gallery__item--4">
-            <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt="" class="gallery__img"></a>
-        </figure>
-        <figure class="gallery__item gallery__item--5">
-            <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt="" class="gallery__img"></a>
-        </figure>
-        <figure class="gallery__item gallery__item--6">
-            <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt="" class="gallery__img"></a>
-        </figure>
-    </div>
-    <div class="button-center">
-        <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" class="fancy-btn"><i class="fa fa-instagram" aria-hidden="true"></i> БОЛЬШЕ ФОТО</a>
-    </div>
-</div>
-<div class="main-map-block">
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A431ed2f9b0765e3ab35658d50c9ec8053407b6141ec3d2c9019413583e2483d7&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-    <div class="container order-map-relative">
-        <div class="map-order-send">
-            <div class="map-order-forms">
-                <h3>ОТПРАВИТЬ ЗАЯВКУ</h3>
-                <input type="text" name="name" placeholder="Ваше имя">
-                <input type="text" name="phone" placeholder="Телефон">
-                <select class="form-control" name="service">
-                    <option>Выберите услугу</option>
-                    <option>Мужские стрижки</option>
-                    <option>Женские стрижки</option>
-                    <option>Макияж</option>
-                    <option>Маникюр</option>
-                    <option>Эстетическая Косметология</option>
-                    <option>Депиляция</option>
-                    <option>Массаж</option>
-                    <option>Солярий</option>
-                    <option>Коррекция бровей машинкой</option>
-                    <option>Педикюр</option>
-                    <option>Пирсинг</option>
-                    <option>Детские стрижки</option>
-                    <option>Мужская модельная стрижка</option>
-                    <option>Инъекционная косметология</option>
-                    <option>Наращивание ресниц</option>
-                    <option>Аппаратная косметология</option>
-                    <option>Депиляция усов, верхней губы (шугаринг-воск)</option>
-                    <option>Депиляция подмышек (шугаринг-воск)</option>
-                    <option>Перманентный макияж</option>
-                    <option>Абонемент в солярий</option>
-                    <option>Прокол ушей Система System 75</option>
-                    <option>Короткие женские стрижки</option>
-                    <option>Пикси женская стрижка</option>
-                    <option>Средние женские стрижки</option>
-                    <option>Каре женская стрижка</option>
-                    <option>Лесенка женская стрижка</option>
-                    <option>Рисунок, узор, линии на голове (Hair Tatoo)</option>
-                    <option>Мужская депиляция волос на лице (Воск Italwax)</option>
-                    <option>Пилинги</option>
-                    <option>Поверхностные пилинги</option>
-                    <option>Салициловый пилинг</option>
-                    <option>Миндальный пилинг</option>
-                    <option>Гликолевый пилинг</option>
-                    <option>Карбоновый пилинг</option>
-                    <option>Каскад женская стрижка</option>
-                    <option>Ультразвуковой пилинг (чистка лица)</option>
-                    <option>Пилинг Alpfa Complex от Holy Land</option>
-                    <option>Желтый пилинг</option>
-                    <option>Пилинг ТСА</option>
-                    <option>Пилинг PRX-T33</option>
-                    <option>Татуаж Бровей (перманентный макияж)</option>
-                    <option>Татуаж Губ (Перманентный макияж)</option>
-                    <option>Татуаж межресничной стрелки (перманентный макияж)</option>
-                    <option>Лучший салон красоты в Центре Санкт-Петербурга</option>
-                    <option>Удаление татуажа - перманентного макияжа</option>
-                    <option>Протезирование ногтей</option>
-                    <option>Установка корректирующей скобы (3TO)</option>
-                    <option>Длинные женские стрижки</option>
-                    <option>Выпрямление волос</option>
-                    <option>Химическое выпрямление волос</option>
-                </select>
-                <button class="fancy-btn">ЗАПИСАТЬСЯ</button>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="grey-line-page">
     <div class="container">
         <div class="flex-sale-cart-block">
@@ -394,7 +229,7 @@
                 <div class="footer-links footer-pay-time">
                     <img src="images/time-white.png" alt="" class="footer-time">
                     <div class="footer-time-text"><b>Мы работаем</b><br>
-                    ежедневно с 10:00 до 21:00</div>
+                        ежедневно с 10:00 до 21:00</div>
                 </div>
                 <div class="btn-footer-feedback">
                     <a href="#" class="fancy-btn">ОТЗЫВЫ</a>
