--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="pages__project">Проект сайта Лица</div>
     <div class="pages__title">Готовность по проекту</div>
     <ul class="pages__list">
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="litsa-spb.html" target="_blank">
                 <span class="pages__name">Главная страница</span>
                 <span class="pages__href">litsa-spb.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="services.html" target="_blank">
                 <span class="pages__name">Услуги</span>
                 <span class="pages__href">services.html</span>
