--- a/blog.html
+++ b/blog.html
@@ -112,7 +112,59 @@
     <div class="title-page">
         <h1>БЛОГ</h1>
     </div>
-
+    <div class="news-block">
+        <div class="news-block-img">
+            <img src="images/good3.jpg">
+        </div>
+        <div class="news-block-body">
+            <h3><a href="#">ПИГМЕНТЫ ДЛЯ ТАТУАЖА</a></h3>
+            <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
+            <div class="read-later-block">
+                <a href="#" class="read-later">Читать полностью</a>
+            </div>
+        </div>
+    </div>
+    <div class="news-block">
+        <div class="news-block-img">
+            <img src="images/good8.jpg">
+        </div>
+        <div class="news-block-body">
+            <h3><a href="#">ПРОТИВОПОКАЗАНИЯ К ПЕРМАНЕНТНОМУ МАКИЯЖУ</a></h3>
+            <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
+            <div class="read-later-block">
+                <a href="#" class="read-later">Читать полностью</a>
+            </div>
+        </div>
+    </div>
+    <div class="news-block">
+        <div class="news-block-img">
+            <img src="images/good7.jpg">
+        </div>
+        <div class="news-block-body">
+            <h3><a href="#">ТЕХНИКИ ТАТУАЖА И ИХ ОТЛИЧИЯ</a></h3>
+            <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
+            <div class="read-later-block">
+                <a href="#" class="read-later">Читать полностью</a>
+            </div>
+        </div>
+    </div>
+    <div class="news-block">
+        <div class="news-block-img">
+            <img src="images/good1.jpg">
+        </div>
+        <div class="news-block-body">
+            <h3><a href="#">ГДЕ УДАЛИТЬ ПЕРМАНЕНТНЫЙ МАКИЯЖ (ТАТУАЖ)?</a></h3>
+            <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
+            <div class="read-later-block">
+                <a href="#" class="read-later">Читать полностью</a>
+            </div>
+        </div>
+    </div>
+    <div class="pagination">
+        <span class="ditto_currentpage">1</span>
+        <a class="ditto_page" href="#">2</a>
+        <a class="ditto_page" href="#">3</a>
+    </div>
 </div>
 <div class="grey-line-page">
     <div class="container">
