--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span class="pages__href">prices.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="blog.html" target="_blank">
                 <span class="pages__name">Блог</span>
                 <span class="pages__href">blog.html</span>
