--- a/shares.html
+++ b/shares.html
@@ -72,6 +72,18 @@
             <div class="collapse navbar-collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">О НАС</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Фотогалерея</a></li>
+                            <li><a href="#">Конаткты</a></li>
+                            <li><a href="#">Наши мастера</a></li>
+                            <li><a href="#">Бренды</a></li>
+                            <li><a href="#">Вакансии</a></li>
+                            <li><a href="#">Письмо руководителю</a></li>
+                            <li><a href="#">Новости салона</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             УСЛУГИ
                         </a>
@@ -93,11 +105,9 @@
                             <li><a href="#">Солярий</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">О САЛОНЕ</a></li>
                     <li><a href="#">ЦЕНЫ</a></li>
-                    <li><a href="#">БЛОГ</a></li>
                     <li><a href="#">АКЦИИ</a></li>
-                    <li><a href="#">МАСТЕРА</a></li>
+                    <li><a href="#">ОТЗЫВЫ</a></li>
                 </ul>
             </div>
         </nav>
