--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="header-main-page">
             <div class="logo-block-header">
-                <a href="/"><img src="images/logo.png" alt=""></a>
+                <a href="/"><img src="images/logo-footer.png" alt=""></a>
             </div>
             <div class="header-address-block">
                 <div class="header-address">
@@ -58,8 +58,7 @@
             </div>
         </div>
     </div>
-</header>
-<div class="black-line-menu">
+    <div class="black-line-menu">
     <div class="container">
         <nav class="navbar navbar-default">
             <div class="navbar-header">
@@ -113,21 +112,19 @@
         </nav>
     </div>
 </div>
-<div class="owl-carousel">
-    <div class="owl-item-img">
-        <img src="images/banner1.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner2.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner3.jpg" alt="">
+</header>
+
+<div class="element-with-video-bg" style="position: relative; overflow: hidden;">
+    <div class="overlay-video"></div>
+    <video loop="" muted="" autoplay="" poster="video/plane.jpg" class="fullscreen-bg__video">
+        <source src="video/videoplayback.mp4" type="video/mp4">
+    </video>
+    <div class="title-page main-page-title">
+        <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
     </div>
 </div>
 <div class="container">
-    <div class="title-page">
-        <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
-    </div>
+    
     <div class="goods-block-main">
         <div class="goods-block-item">
             <div class="goods-main-img">
