--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -205,7 +205,7 @@
             <a href="#" class="fancy-btn">СМОТРЕТЬ ВСЕ</a>
         </div>
     </div>
-    <div class="background-image-block">
+    <!--<div class="background-image-block">
         <div class="overlay-block"></div>
         <div class="container">
             <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
@@ -230,7 +230,7 @@
                 <a href="#" class="fancy-btn">ПОДРОБНЕЕ</a>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="container">
         <div class="title-page">
             <h2>СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ</h2>
@@ -393,6 +393,65 @@
                 </div>
                 <div class="shares-image-block">
                     <img src="images/shares.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="actions-social">
+        <h2>Узнайте об акциях первыми!</h2>
+        <p>Подпишитесь на наши социальные сети и вы не только будете узнавать о всех специальных предложениях первыми,
+            но и сможете узнать о новинках в области индустрии красоты.</p>
+        <div class="footer-address-item social-block">
+            <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" title="Мы в Instagram">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a href="https://vk.com/litsa_spb" target="_blank" title="Мы ВКонтакте">
+                <i class="fa fa-vk" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.facebook.com/Litsaspb/" target="_blank" title="Мы в Facebook">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/SalonLitsa" target="_blank" title="Мы в Twitter">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank" title="Мы в WhatsApp">
+                <i class="fa fa-whatsapp" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank" title="Мы в Telegram">
+                <i class="fa fa-telegram" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+    <div class="sign-up-block">
+        <div class="container">
+            <div class="sign-up-title">ЗАПИСАТЬСЯ ОНЛАЙН</div>
+            <div class="sign-up-flex">
+                <div class="sign-up-flex-item">
+                    <div class="sign-up-flex-item-title">
+                        Ваше имя:
+                    </div>
+                    <div class="sign-up-flex-item-input">
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="sign-up-flex-item">
+                    <div class="sign-up-flex-item-title">
+                        Ваш телефон:
+                    </div>
+                    <div class="sign-up-flex-item-input">
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="sign-up-flex-item">
+                    <div class="sign-up-flex-item-title">
+                        Ваш email:
+                    </div>
+                    <div class="sign-up-flex-item-input">
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="sign-up-flex-item">
+                    <button type="button" class="fancy-btn">Записаться</button>
                 </div>
             </div>
         </div>
